tests/fail/snapshot_outlive_db.stderr
error[E0432]: unresolved import `rocksdb`
 --> tests/fail/snapshot_outlive_db.rs:1:5
  |
1 | use rocksdb::DB;
  |     ^^^^^^^ use of undeclared crate or module `rocksdb`
